<resources>
    <string name="app_name">Curriculum Vitae</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="connection_refused">Connection refused</string>
    <string name="session_expired">Session expired</string>
    <string name="network_error">Network error</string>
    <string name="connect_to_server">Couldn\'t connect to server</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="loading">loading...</string>
    <string name="contacts">My Contacts</string>
    <string name="contact">Contact</string>
    <string name="work">Work</string>
    <string name="about_me">About Me</string>
    <string name="home">Home</string>
    <string name="james_stark">James Stark</string>
    <string name="software_engineer">Software Engineer</string>
    <string name="career_note">Career note</string>
    <string name="career_note_text"><b>Completed</b> on-campus studies and currently taking distance education course in computer a Master\'s degree in Computer Science (Available for full-time, <b>W-2</b> employment)</string>
<<<<<<< HEAD
    <string name="work_experience">Work Experience</string>
=======
    <string name="add_work_experience">Add Work Experience</string>
    <string name="experience_title">Experience Title</string>
    <string name="experience_description">Experience Description</string>
    <string name="add">Add</string>
    <string name="add_new_work_experience_button">Add new work experience button</string>
>>>>>>> 810ac3042eb68cd84e31f38de70f380d369b3633

</resources>